--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
           <h3 class="header white-text">Download Forever Linux</h3>
           <div class="row">
 
-            <div class="col s12 m9 red">
+            <div class="col s12 m9">
               <p class="grey-text text-darken-3 lighten-3">
-                would you controll your telephone ?<br />
-                then download this
+                How much do you know about your phone?<br />
+                Donwload free app
               </p>
 
             </div>
-            <div class="col s12 m3 blue">
+            <div class="col s12 m3">
               <a href="https://play.google.com/store/apps/details?id=com.f4med.foreverlinux&hl=en">
                 <img class="responsive-img" src="http://foreverlinux.f4med.com/img/google-play-badge.png" alt="">
               </a>
